--- a/my_app/src/App.css
+++ b/my_app/src/App.css
@@ -156,7 +156,7 @@ a:visited {
 }
 
 input[type='text'],
-input[type='password'],
+input[type='password'],input[type='email'],
 button,
 textarea {
   font-family: 'Nunito', sans-serif;
