--- a/my_app/src/pages/About.css
+++ b/my_app/src/pages/About.css
@@ -1,21 +1,43 @@
 
+  /* About.css */
 .about-container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  .about-container h1 {
-    font-size: 2em;
-    color: white ;
-    margin-bottom: 20px;
-  }
-  
-  .about-container p {
-    font-size: 1.2em;
-    color: #cdcdcd;
-    line-height: 1.6;
-  }
+  display: flex;
+  justify-content: space-between;
+  max-width: auto;
+  margin:70px;
+  padding: 20px;
+  background-color:#c5bac4;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 
-  
+.about-text {
+  flex: 1;
+}
+
+.about-text h1 {
+  color:#555;
+  font-size: 40px;
+  font-family:'Courier New', Courier, monospace;
+}
+
+.about-text p {
+  line-height: 1.6;
+  color: #555;
+  font-size: 20px;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.about-image {
+  flex: 1;
+  margin-left: 20px; 
+}
+
+.about-image img {
+  max-width: 100%;
+  height: auto;
+  padding: 5px;
+  border-radius: 8px;
+  border: 2px solid #333;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
