--- a/my_app/src/pages/Editprofile.css
+++ b/my_app/src/pages/Editprofile.css
@@ -22,7 +22,7 @@ form {
     font-size: 15px;
     border-radius: 25px;
     font-weight: bold;
-    border: 2px solid #c5bac4;
+    border: 2px solid white;
     background: transparent;
     color: #fff;
     cursor: pointer;
